2003-02-12  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/url-scanner.c: Fixed the table to treat >=127 as a CTRL
	character.

	* gmime/gtrie.c (trie_utf8_getc): When we encounter an invalid
	UTF-8 sequence, update in to point to in+1 and return 0xffff.
	(g_trie_add): Handle invalid UTF-8 sequences (ie, c == 0xffff).
	(g_trie_search): Same.

	* gmime/gmime-filter-html.c (html_utf8_getc): Shortcut if inptr ==
	inend by returning 0 and treating it as if we found the
	terminating nul-char.

2003-02-08  Jeffrey Stedfast  <fejj@ximian.com>

	* configure.in: Bumped the version to 2.0.1

	* docs/*: A completely new set of documentation.

2003-02-07  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/gmime-multipart.c (multipart_remove_part): When the part
	being removed is not the first part in the list, make sure to set
	node->prev->next = node->next -- oops :-)
	(multipart_remove_part_at): Same.

2003-01-25  Jeffrey Stedfast  <fejj@ximian.com>

	* configure.in: Bumped the version to 2.0.0

	* gmime/gmime-filter-html.c (writeln): Read the stream as UTF-8
	rather than 8bit so that we can properly write out unicode
	entities.

2002-12-17  Jeffrey Stedfast  <fejj@ximian.com>

	Build fixes for G_DISABLE_DEPRECATED

	* gmime/gmime-param.c (encode_param): Replace calls to
	g_string_sprintfa() with g_string_append_printf() since the former
	is marked as being deprecated.
	(param_list_format): Same.

	* gmime/gmime-utils.c (rfc2047_encode_word): Here too.

2002-12-16  Jeffrey Stedfast  <fejj@ximian.com>

	* configure.in: Bumped the version to 1.90.8

	* doc/gmime-doc.sgml: Added a section for GMimeFilterMd5.

	* doc/gmime-sections.txt: Added a section on GMimeFilterMd5.

	* tests/test-parser.c (print_mime_struct): Validate Content-Md5
	headers.

	* gmime/gmime-part.c (g_mime_part_set_content_md5): Rewritten to
	use the md5 filter and also to do things the right way by
	converting textual parts to their canonical CRLF form.
	(g_mime_part_verify_content_md5): Same.
